--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 build
 gradle
 
-config.yml
 cache
+config.yml
 caches.json
 guilds.json
-ignores.json
 voices.json
-
+ignores.json
+aliases.json
 test.wav
