--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           cd project
           gradle build
+          mv build/libs/*.jar build/libs/vcspeaker-kt.jar
       - name: 🗃️ Publish Release on main
         env:
           project_version: ${{ steps.version.outputs.new_version }}
@@ -50,4 +51,19 @@ jobs:
           generate_release_notes: true
           tag_name: ${{ env.project_version }}
           files: |
-            project/build/libs/*.jar
+            project/build/libs/vcspeaker-kt.jar
+      - name: 🏗️ Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: 📥 Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      - name: 🚀 Build Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./project
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
