--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,4 +66,4 @@ jobs:
           context: ./project
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+            ghcr.io/jaoafa/VCSpeakerKt:latest
