--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,39 @@
 site_name: VCSpeaker.kt Docs
-theme: 
+site_url: https://jaoafa.github.io/VCSpeaker.kt
+repo_url: https://github.com/jaoafa/VCSpeaker.kt
+repo_name: jaoafa/VCSpeaker.kt
+theme:
   name: material
+  palette:
+    # Palette toggle for light mode
+    - scheme: default
+      primary: deep-orange
+      accent: deep-orange
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      primary: deep-orange
+      accent: deep-orange
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
+  icon:
+    logo: material/volume-source
+    repo: fontawesome/brands/github
+  features:
+    - navigation.instant
+    - navigation.tabs
+markdown_extensions:
+  - attr_list
+  - md_in_html
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+plugins:
+  - glightbox
+  - search
+  - awesome-pages
+  - git-revision-date-localized
