--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,19 +18,21 @@ jobs:
     runs-on: ubuntu-latest
 
     outputs:
-      version: ${{ steps.version.outputs.new_version }}
-      tag: ${{ steps.version.outputs.new_tag }}
-      changelog: ${{ steps.version.outputs.changelog }}
+      version: ${{ steps.semantic.outputs.new_release_version }}
+      tag: ${{ steps.semantic.outputs.new_release_git_tag }}
+      changelog: ${{ steps.semantic.outputs.new_release_notes }}
 
     steps:
-      - name: 🔼 Bump release version
-        id: version
-        uses: mathieudutour/github-tag-action@v6.0
+      - name: 🔼 Semantic Release
+        id: semantic
+        uses: cycjimmy/semantic-release-action@v4
         with:
-          github_token: ${{ github.token }}
-          default_bump: "minor"
-          custom_release_rules: "breaking:major:💣 Breaking Changes,feat:minor:✨ Features,fix:patch:💣 Bug Fixes,docs:patch:📰 Docs,chore:patch:🎨 Chore,pref:patch:🎈 Performance improvements,refactor:patch:🧹 Refactoring,build:patch:🔍 Build,ci:patch:🔍 CI,revert:patch:⏪ Revert,style:patch:🧹 Style,test:patch:👀 Test"
-
+          branches: |
+            [
+              "main"
+            ]
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
   build-docker:
     name: 🏗️ Build Docker (${{ matrix.architecture }})
     runs-on: ubuntu-latest
@@ -39,7 +41,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        architecture: [amd64, arm64]
+        architecture: [ amd64, arm64 ]
 
     steps:
       - name: 📥 Checkout ${{ github.repository }}
