--- a/.releaserc
+++ b/.releaserc
@@ -7,5 +7,6 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/github",
     "@semantic-release/git"
-  ]
+  ],
+  "dryRun": true
 }
