--- a/.releaserc
+++ b/.releaserc
@@ -3,6 +3,7 @@
     "main"
   ],
   "plugins": [
+    "conventional-changelog-conventionalcommits",
     [
       "@semantic-release/commit-analyzer",
       {
