--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,6 +116,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - bump-version
+      - build-docker
+      - merge-latest
 
     steps:
       - name: ☕ Setup Zulu JDK 17
