--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -88,5 +88,8 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
+      env: 
+        JAVA_OPTS: "-Xms128m -Xmx2G"  
+        
       with:
         category: "/language:${{matrix.language}}"
