fix: use conventional-changelog-conventionalcommits v7

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
         uses: cycjimmy/semantic-release-action@v4
         with:
           extra_plugins: |
-            conventional-changelog-conventionalcommits
+            conventional-changelog-conventionalcommits@^7.0.2
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
