--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,13 @@ jobs:
       - name: 🐘 Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
+      - name: ⌛ Restore caches
+        uses: actions/cache@v4
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: ✅ Run Tests
         run: gradle test
