ci: change emoji on step name

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,5 +29,5 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: ✅ Run Tests
+      - name: 🧪 Run Tests
         run: gradle test
