ci: リリース時のコミット指定をハッシュに変更

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -152,6 +152,6 @@ jobs:
         with:
           body: ${{ needs.bump-version.outputs.changelog }}
           tag_name: ${{ needs.bump-version.outputs.tag }}
-          target_commitish: ${{ github.ref }}
+          target_commitish: ${{ github.sha }}
           files: |
             build/libs/vcspeaker-kt.jar
