--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   add-reviews:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - uses: kentaro-m/auto-assign-action@v2.0.0
         with:
