--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,11 +13,11 @@ jobs:
       - name: 📥 Checkout ${{ github.repository }}
         uses: actions/checkout@v4
 
-      - name: ☕ Setup Java 17
+      - name: ☕ Setup Java 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
-          distribution: 'zulu'
+          java-version: 21
+          distribution: zulu
 
       - name: 🐘 Setup Gradle
         uses: gradle/actions/setup-gradle@v3
