--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -89,6 +89,7 @@ jobs:
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
     - if: matrix.build-mode == 'manual'
       run: |
+        echo "kotlin.daemon.jvmargs=-Xmx6G" >> gradle.properties
         ./gradlew build
 
     - name: Perform CodeQL Analysis
