fix: use env instead

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -87,9 +87,11 @@ jobs:
     # to build your code.
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
-    - if: matrix.build-mode == 'manual'
+    - name: Build manually
+      if: matrix.build-mode == 'manual'
+      env:
+        "kotlin.daemon.jvmargs": "-Xmx6G"
       run: |
-        echo "kotlin.daemon.jvmargs=-Xmx6G" >> gradle.properties
         ./gradlew build
 
     - name: Perform CodeQL Analysis
