--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -89,10 +89,8 @@ jobs:
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
     - name: Build manually
       if: matrix.build-mode == 'manual'
-      env:
-        "kotlin.daemon.jvmargs": "-Xmx6G"
       run: |
-        ./gradlew build
+        ./gradlew build -Dkotlin.daemon.jvmargs='-Xmx6G'
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
