--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,6 +83,10 @@ jobs:
   build-jar:
     name: 📦 Build Jar
     runs-on: ubuntu-latest
+    needs: bump-version
+
+    env:
+      version: ${{ needs.bump-version.outputs.version }}
 
     steps:
       - name: ☕ Setup Zulu JDK 21
@@ -109,11 +113,11 @@ jobs:
 
       - name: 🐘 Run Gradle command
         run: |
-          gradle build
+          gradle build -Pversion=${{ env.version }}
 
       - name: 📦 Upload the artifact
         uses: actions/upload-artifact@v4
         with:
-          name: VCSpeaker.kt Shadow Jar
-          path: build/libs/vcspeaker-kt-all.jar
+          name: VCSpeaker.kt ${{ env.version }} Shadow Jar
+          path: build/libs/vcspeaker-${{ env.version }}-all.jar
           overwrite: true
