--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,6 +119,9 @@ jobs:
       - build-docker
       - merge-latest
 
+    env:
+      version: ${{ needs.bump-version.outputs.version }}
+
     steps:
       - name: ☕ Setup Zulu JDK 21
         uses: actions/setup-java@v4.7.0
@@ -144,7 +147,7 @@ jobs:
 
       - name: 🐘 Run Gradle command
         run: |
-          gradle build
+          gradle build -Pversion=${{ env.version }}
 
       - name: 🗃️ Publish Release on main
         uses: softprops/action-gh-release@v2
@@ -153,4 +156,4 @@ jobs:
           tag_name: ${{ needs.bump-version.outputs.tag }}
           target_commitish: ${{ github.sha }}
           files: |
-            build/libs/vcspeaker-kt-all.jar
+            build/libs/vcspeaker-${{ env.version }}-all.jar
