--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: bump-version
 
+    env:
+      version: ${{ needs.bump-version.outputs.version }}
+
     strategy:
       fail-fast: false
       matrix:
@@ -79,6 +82,8 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           provenance: false
+          build-args: |
+            VERSION=${{ env.version }}
 
   build-jar:
     name: 📦 Build Jar
