--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: bump-version
 
+    env:
+      version: ${{ needs.bump-version.outputs.version }}
+
     strategy:
       fail-fast: false
       matrix:
@@ -81,6 +84,8 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           provenance: false
+          build-args: |
+            VERSION=${{ env.version }}
 
   merge-latest:
     name: 📥 Merge latest
