--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: bump-version
 
+    env:
+      version: ${{ needs.bump-version.outputs.version }}
+
     strategy:
       fail-fast: false
       matrix:
@@ -81,6 +84,8 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           provenance: false
+          build-args: |
+            VERSION=${{ env.version }}
 
   merge-latest:
     name: 📥 Merge latest
@@ -119,6 +124,9 @@ jobs:
       - build-docker
       - merge-latest
 
+    env:
+      version: ${{ needs.bump-version.outputs.version }}
+
     steps:
       - name: ☕ Setup Zulu JDK 21
         uses: actions/setup-java@v4.7.0
@@ -144,7 +152,7 @@ jobs:
 
       - name: 🐘 Run Gradle command
         run: |
-          gradle build
+          gradle build -Pversion=${{ env.version }}
 
       - name: 🗃️ Publish Release on main
         uses: softprops/action-gh-release@v2
@@ -153,4 +161,4 @@ jobs:
           tag_name: ${{ needs.bump-version.outputs.tag }}
           target_commitish: ${{ github.sha }}
           files: |
-            build/libs/vcspeaker-kt-all.jar
+            build/libs/vcspeaker-${{ env.version }}-all.jar
