--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -134,10 +134,10 @@ jobs:
           distribution: zulu
           java-version: 21
 
-      - name: 🐘 Setup Gradle
-        uses: gradle/gradle-build-action@v3
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
         with:
-          gradle-version: release-candidate
+          gradle-version: current
 
       - name: 📥 Checkout ${{ github.repository }}
         uses: actions/checkout@v4
