--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,10 +100,10 @@ jobs:
           distribution: zulu
           java-version: 21
 
-      - name: 🐘 Setup Gradle
+      - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
-          gradle-version: release-candidate
+          gradle-version: current
 
       - name: 📥 Checkout ${{ github.repository }}
         uses: actions/checkout@v4
