--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,21 @@
 services:
+  lavalink:
+    image: ghcr.io/lavalink-devs/lavalink:4-alpine
+    container_name: lavalink
+    restart: unless-stopped
+    environment:
+      - _JAVA_OPTIONS=-Xmx6G
+      - SERVER_PORT=2333
+      - LAVALINK_SERVER_PASSWORD=CHANGEME
+      - LAVALINK_SERVER_SOURCES_LOCAL=true
+    volumes:
+      - ./application.yml:/opt/Lavalink/application.yml
+      - ./plugins/:/opt/Lavalink/plugins/
+      - ./cache/:/opt/Lavalink/cache/
+    expose:
+      - 2333
+    ports:
+      - "2333:2333"
   app:
     build: .
     volumes:
