--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -14,7 +14,7 @@ jobs:
       - name: 📥 Checkout ${{ github.repository }}
         uses: actions/checkout@v6
 
-      - name: 🐍 Setup Python 3.10
+      - name: 🐍 Setup Python
         uses: actions/setup-python@v6
         with:
           python-version: "3.14"
